// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusNotification DocumentStatusCode.LOCALE_VALIDATION_ERRORS when the number of errored locales is 1 matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    The following locales have fields with errors: English (United States)
  </Paragraph>
</div>
`;

exports[`StatusNotification DocumentStatusCode.LOCALE_VALIDATION_ERRORS when the number of errored locales is 2 matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    The following locales have fields with errors: Spanish (Spain) and English (United States)
  </Paragraph>
</div>
`;

exports[`StatusNotification DocumentStatusCode.LOCALE_VALIDATION_ERRORS when the number of errored locales is 3 matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    The following locales have fields with errors: Spanish (Spain), English (United States), and French (France)
  </Paragraph>
</div>
`;

exports[`StatusNotification DocumentStatusCode.LOCALE_VALIDATION_ERRORS when the number of errored locales is 4 matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    The following locales have fields with errors: Spanish (Spain), Arabic (Egypt), English (United States), and 1 other
  </Paragraph>
</div>
`;

exports[`StatusNotification DocumentStatusCode.LOCALE_VALIDATION_ERRORS when the number of errored locales is 5 matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    The following locales have fields with errors: Spanish (Spain), Arabic (Egypt), German (Germany), and 2 others
  </Paragraph>
</div>
`;

exports[`StatusNotification archived when the entity label is "asset" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    This entry is archived and cannot be modified. Please unarchive it to make any changes.
  </Paragraph>
</div>
`;

exports[`StatusNotification archived when the entity label is "entry" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    This entry is archived and cannot be modified. Please unarchive it to make any changes.
  </Paragraph>
</div>
`;

exports[`StatusNotification default-locale-file-error when the entity label is "asset" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    This asset is missing a file for the default locale.
  </Paragraph>
</div>
`;

exports[`StatusNotification default-locale-file-error when the entity label is "entry" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    This asset is missing a file for the default locale.
  </Paragraph>
</div>
`;

exports[`StatusNotification deleted when the entity label is "asset" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    This entry has been deleted and cannot be modified anymore.
  </Paragraph>
</div>
`;

exports[`StatusNotification deleted when the entity label is "entry" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    This entry has been deleted and cannot be modified anymore.
  </Paragraph>
</div>
`;

exports[`StatusNotification editing-not-allowed when the entity label is "asset" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    You have read-only access to this entry. If you need to edit it please contact your administrator.
  </Paragraph>
</div>
`;

exports[`StatusNotification editing-not-allowed when the entity label is "entry" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    You have read-only access to this entry. If you need to edit it please contact your administrator.
  </Paragraph>
</div>
`;

exports[`StatusNotification internal-server-error when the entity label is "asset" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    Due to a server error, we could not process this entry. The fields are temporarily locked so that you won’t lose any important changes.
  </Paragraph>
</div>
`;

exports[`StatusNotification internal-server-error when the entity label is "entry" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    Due to a server error, we could not process this entry. The fields are temporarily locked so that you won’t lose any important changes.
  </Paragraph>
</div>
`;

exports[`StatusNotification ot-connection-error when the entity label is "asset" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    It appears that you aren’t connected to internet at the moment. The fields are temporarily locked so that you won’t lose any important changes.
  </Paragraph>
</div>
`;

exports[`StatusNotification ot-connection-error when the entity label is "entry" matches snapshot 1`] = `
<div
  className="entity-editor__notification"
>
  <Paragraph
    element="p"
    testId="cf-ui-paragraph"
  >
    It appears that you aren’t connected to internet at the moment. The fields are temporarily locked so that you won’t lose any important changes.
  </Paragraph>
</div>
`;
